crates/oxc_angular_compiler/tests/snapshots/partial_factory_test__factory_with_invalid_deps_emits_string_invalid.snap
---
source: crates/oxc_angular_compiler/tests/partial_factory_test.rs
expression: js
---
i0.ɵɵngDeclareFactory({minVersion:"12.0.0",version:"0.0.0-PLACEHOLDER",ngImport:i0,
    type:MyService,deps:"invalid",target:i0.ɵɵFactoryTarget.Injectable})
