crates/oxc_angular_compiler/tests/snapshots/partial_factory_test__simple_injectable_factory_with_one_dep.snap
---
source: crates/oxc_angular_compiler/tests/partial_factory_test.rs
expression: emit(&expr)
---
i0.ɵɵngDeclareFactory({minVersion:"12.0.0",version:"0.0.0-PLACEHOLDER",ngImport:i0,
    type:MyService,deps:[{token:HttpClient}],target:i0.ɵɵFactoryTarget.Injectable})
